<resources>
    <string name="app_name">Respiratory Fitness Tracker</string>

    <!--    Common  -->
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="skip">Skip</string>

    <!--    How it works    -->
    <string name="daily_check_in">Daily check in:</string>
    <string name="how_it_works">How it works</string>
    <string name="tell_us_how_you_re_feeling">Tell us how you’re feeling</string>
    <string name="select_an_emoji_that_represents_text">Select an emoji that represents how you feel today.</string>
    <string name="record_your_voice_sample">Record your voice sample</string>
    <string name="read_a_few_sentences_text">Read a few sentences and we’ll analyze it in real-time.</string>
    <string name="get_your_score_and_factors">Get your score and factors</string>
    <string name="uncover_personalized_scores_text">Uncover personalized scores, insights, and tips to improve.</string>
    <string name="start_your_first_check_in">Start your first check-in</string>
    <!--    How it works    -->

    <string name="continue_to_your_dashboard">Continue to your dashboard</string>
    <string name="don_t_what_to_check_in_right_now">Don’t what to check-in right now?</string>
    <string name="next_step">Next step</string>
    <string name="get_ready_to_record">Get ready to record</string>
    <string name="find_a_quiet_place">Find a quiet place</string>
    <string name="find_a_quiet_place_free_text">Find a quiet place free of background noise to record a quality sample</string>
    <string name="record_for_x_seconds">Record for %d seconds</string>
    <string name="speak_for_x_seconds_text">Speak for %d seconds using a prompt topic</string>
    <string name="your_recording_prompt">Your recording prompt</string>
    <string name="be_prepared_to_talk_about_x_text">Be prepared to \'%s\'</string>
    <string name="begin_recording">Begin recording</string>

    <string name="error_msg_no_internet">Slow or no internet connection.\nPlease check your internet settings.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="failed_to_load_check_config">Failed to load checkIn configuration</string>

    <!--    Welcome    -->
    <string name="welcomeheading">Mental Fitness and Respiratory</string>
    <string name="welcome_title">A fitness tracker for your mental and respiratory health.</string>
    <string name="welcome_button">Get Started</string>
    <!--    Welcome    -->

    <!--    Enroll User    -->
    <string name="enroll_user">Enroll User</string>
    <string name="passive_user_verification_and_health_check">Passive user verification and health check</string>
    <!--    Enroll User    -->

    <!--    Forgot Password    -->

    <!--    Sign Up    -->
    <string name="title">Sign up</string>
    <string name="step_no">Step 1 of 2</string>
    <string name="fname">First name*</string>
    <string name="lname">Last name (Optional)</string>
    <string name="email">Email*</string>
    <string name="gender">Gender*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender_msg">This information will help us provide the most accurate score.</string>
    <string name="dob">Year of birth*</string>
    <!--    Sign Up    -->

    <!--    OTP verification    -->
    <!--   OTP verification    -->

    <!--   Onboarding    -->

    <string name="common_cancel">Cancel</string>
    <string name="get_ready">Get ready...</string>
    <string name="be_prepared_talk_about_X_text">Be prepared to \'%s\'</string>
    <string name="recording">Recording...</string>
    <string name="timer_seconds">%ds</string>
    <string name="speak_for_x_seconds">Please speak for %d seconds</string>

    <string name="analyzing_your_voice">Analyzing your voice</string>
    <string name="understanding_your_mental_fitness">Understanding your Respiratory Symptoms Risk</string>
    <string name="understanding_your_mental_risk">Understanding your Mental Fitness</string>
    <string name="checking_additional_factors">Checking additional factors</string>
    <string name="finalizing_your_scores">Finalizing your scores</string>
    <string name="oops">Oops.</string>
    <string name="cal_error_emoji">😐</string>
    <string name="go_back_and_try_again">Go back and try again</string>
    <string name="cancel">Cancel</string>
    <string name="common_done">Done</string>
    <string name="your_mental_fitness">Your Respiratory Symptoms Risk</string>
    <string name="factors">Factors</string>
    <string name="tips_to_improve_your_fitness">Tips to improve your fitness</string>
    <string name="go_to_your_insights_dashboard">Go to your Insights Dashboard</string>
    <string name="need_to_talk_to_someone">Need to talk to someone?</string>
    <string name="if_you_are_in_emotional_distress_or_suicidal_crisis_msg">If you are in emotional distress or suicidal crisis, you are not alone. Call the National Suicide Prevention Lifeline at 1-800-273-8255. It’s free, confidential, and available 24/7.</string>
    <string name="learn_more">Learn more</string>
    <string name="img_description_back_button">Back button</string>
    <string name="birth_year_hint">YYYY</string>
    <string name="select_year_of_birth">Select year of birth</string>
    <string name="sign_up">Signup</string>
    <string name="set_4_digit_pin">Set 4 digit PIN</string>
    <string name="or">or</string>
    <string name="set">Set</string>
    <string name="no_pin_set_message">Don\'t want to set PIN</string>
    <string name="_4_digit_pin">4 digit pin</string>
    <string name="confirm_4_digit_pin">confirm 4 digit PIN</string>
    <string name="_4_digit_pin_message">A PIN protects your data and is used to unlock the app</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="please_enter_the_4_digit_pin_to_unlock_the_app">Please enter the 4 digit PIN to unlock the app</string>
    <string name="verify">Verify</string>
    <string name="wrong_pin_msg">Wrong PIN entered</string>
    <string name="score_info">Score Info</string>
    <string name="score_info_detail">Respiratory Symptoms Risk scores are tailored to reflect a user’s level of respiratory symptoms. Higher risk scores reflect increasing similarity to vocal characteristics observed in people with asthma, COPD, and similar chronic airway conditions.  Respiratory Symptom Risk scores can be used to detect or monitor respiratory symptoms in various conditions. \n Symptoms that drive the Respiratory Symptom Risk scores may include: \n   \t \t \t • Shortness of breath \n \t \t \t • Cough \n \t \t \t • Chest tightness or pain</string>
    <string name="error_message_elck_failed">Uh oh, looks like we can\'t process your voice sample. Please try again in a quiet place and make sure to speak clearly without pausing</string>
    <string name="signup_with_questionnaire">Signup with questionnaire</string>
    <string name="under_development">Development is in progress</string>
    <string name="your_data_does_not_leave_your_device_to_ensure_highest_security_and_privacy">Your voice sample is deleted immediately to ensure highest security and privacy.</string>
    <string name="sonde_vocal_biomarkers">Vocal Biomarker App</string>
    <string name="check_in_results">Check-in results</string>
    <string name="your_mental_fitness_score">Your mental fitness score</string>
    <string name="your_score_components">Your score components</string>
    <string name="notice_about_enroll">We need 15 seconds of continuous speech to create the best voiceprint\nThe good news is that you only need to do this once!</string>
    <string name="notice_about_enroll_new">Read a 10 second script at your normal voice level and keep the phone at arm\'s length.</string>
    <string name="record">Record</string>
    <string name="speech_is_not_enough">Sorry, but the recorded speech is not enough for analysis</string>
    <string name="speech_is_too_noisy">The audio record has too much background noise. Please record in a quieter location</string>
    <string name="speech_has_too_long_reverberation">The audio record has strong echo. Please record in an another location</string>
    <string name="enroll_tips">It was the best of times, it was the worst of times, it was the age of wisdom, it was the age of foolishness, it was the epoch of belief, it was the epoch of incredulity, it was the season of Light, it was the season of Darkness, it was the spring of hope, it was the winter of despair, we had everything before us, we had nothing before us, we were all going direct to Heaven, we were all going direct the other way—in short, the period was so far like the present period, that some of its noisiest authorities insisted on its being received, for good or for evil, in the superlative degree of comparison only.</string>
    <string name="header_about_enroll_tips">Hints to speak for 15 seconds:</string>
    <string name="please_wait">Your vocal biomarker scores are being calculated</string>
    <string name="back">Back</string>
    <string-array name="aggregated_score_track_Gradient_Positions_array">
        <item>0.0</item>
        <item>0.27</item>
        <item>0.41</item>
        <item>0.57</item>
    </string-array>

    <string-array name="delayTime">
        <item>None</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hour</item>
        <item>3 Hour</item>
        <item>5 Hour</item>
    </string-array>

</resources>