<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.sonde.mentalfitness.presentation.ui.pin.verify.VerifyPinViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_large_32dp">

        <TextView
            style="@style/text_p1_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_mid_16dp"
            android:layout_marginBottom="@dimen/margin_large_32dp"
            android:text="@string/enter_pin"
            android:textColor="@color/black"
            android:textSize="@dimen/font_28sp" />

        <TextView
            style="@style/text_p1_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_mid_16dp"
            android:layout_marginBottom="@dimen/margin_mid_16dp"
            android:text="@string/please_enter_the_4_digit_pin_to_unlock_the_app"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pin"
            style="@style/EditText_h6_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_mid_16dp"
            android:hint="@string/_4_digit_pin"
            android:inputType="numberSigned|numberPassword"
            android:maxLength="4"
            android:text="@={viewModel.pinInput}" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_large_32dp"
            android:layout_marginBottom="@dimen/margin_mid_16dp"
            android:background="@drawable/bottom_button_drawable"
            android:enabled="@{viewModel.isValidated()}"
            android:onClick="@{()->viewModel.onVerifyButtonClick()}"
            android:text="@string/verify"
            android:textAllCaps="false" />


    </LinearLayout>
</layout>