<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.sonde.mentalfitness.presentation.ui.voiceprocessing.calculationerror.ScoreCalculationErrorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_navy_blue_dark">


        <TextView
            android:id="@+id/textView19"
            style="@style/text_h1_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oops"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large_32dp"
            android:text="@string/cal_error_emoji"
            android:textAlignment="center"
            android:textSize="72sp"
            app:layout_constraintBottom_toTopOf="@+id/textView19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large_extra_48dp"
            android:layout_marginTop="@dimen/margin_mid_16dp"
            android:layout_marginEnd="@dimen/margin_large_extra_48dp"
            android:gravity="center"
            android:text="@{viewModel.errorMessage}"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <Button
            android:id="@+id/button"
            style="@style/text_h5_semi_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large_32dp"
            android:layout_marginEnd="@dimen/margin_large_32dp"
            android:layout_marginBottom="@dimen/margin_large_32dp"
            android:background="@drawable/bg_capsule_outline_accent"
            android:text="@string/cancel"
            android:onClick="@{()-> viewModel.onCancelClicked()}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button2"
            style="@style/button_large_accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_mid_16dp"
            android:text="@string/go_back_and_try_again"
            android:onClick="@{()-> viewModel.onGoBackAndTryAgainClicked()}"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>