<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:src="@drawable/sonde_logo" />


            <TextView
                android:id="@+id/heading"
                style="@style/text_h1_semi_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mid_16dp"
                android:layout_marginTop="@dimen/margin_large_32dp"
                android:layout_marginEnd="@dimen/margin_mid_16dp"
                android:gravity="center"
                android:text="@string/welcomeheading"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="36sp" />


            <TextView
                android:id="@+id/sub_heading"
                style="@style/text_p4_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large_32dp"
                android:paddingStart="@dimen/margin_mid_16dp"
                android:paddingEnd="@dimen/margin_mid_16dp"
                android:text="@string/welcome_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/get_started"
                style="@style/button_large_accent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large_32dp"
                android:layout_marginRight="@dimen/margin_large_32dp"
                android:layout_marginBottom="@dimen/margin_large_32dp"
                android:text="@string/welcome_button" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>